# OtwartyJO

./: .gitignore  CMakeLists.txt  README.md  buduj.sh  generuj.sh  testuj.sh
generator/: generate.py  nodes.py  parser.py  translations.py  utils.py
otwarty_jo/: CMakeLists.txt  jo.c  jo_utils.h
otwarty_jo/include/CL/: cl.h
otwarty_jo/include/JO/: jo.h
test/: .clang-format  CMakeLists.txt  jo_info.c  wektory.c
